--- a/template/header.html
+++ b/template/header.html
@@ -23,7 +23,7 @@
               <li><a href="/contact" class="nav-link pr-2 link-light fw-bold">Contact</a></li>
               <li><a href="/about" class="nav-link pr-2 link-light fw-bold">About Us</a></li>
             </ul>
-            <div class="col-2">
+            <div class="col-2 pt-2">
               {% if user.is_authenticated %}
               <div class="text-end"><a href="/logout"><button type="button" class="btn btn-primary border-light fw-bold mx-2">Logout</button></a>              </div>
               {% else %}
