--- a/template/payment.html
+++ b/template/payment.html
@@ -16,7 +16,7 @@ var options = {
         alert(response.razorpay_payment_id);
         alert(response.razorpay_order_id);
         alert(response.razorpay_signature);
-        window.location.href='http://127.0.0.1:8000/sendmail';
+        window.location.href='http://127.0.0.1:8000/sendmail/{{pid}}';
     },
     "prefill": {
         "name": "xyz",
